--- a/Bantu/Bantu/View/User/Home.storyboard
+++ b/Bantu/Bantu/View/User/Home.storyboard
@@ -90,10 +90,16 @@
                                     <outlet property="delegate" destination="CoF-8A-c6t" id="scF-0H-GLe"/>
                                 </connections>
                             </tableView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M5u-ho-zDr">
+                            <searchBar opaque="NO" contentMode="redraw" fixedFrame="YES" barStyle="black" searchBarStyle="minimal" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M5u-ho-zDr">
                                 <rect key="frame" x="0.0" y="88" width="375" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="0.1764705882" green="0.47843137250000001" blue="0.56078431370000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="barTintColor" red="0.1764705882" green="0.47843137250000001" blue="0.56078431370000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
                                 <connections>
                                     <outlet property="delegate" destination="CoF-8A-c6t" id="0eI-In-fch"/>
                                 </connections>
